# app-powerd

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TECH-SPEC.md  deny.toml
config/: default.yaml
crates/app-powerd/: Cargo.toml
crates/app-powerd-core/: Cargo.toml
crates/app-powerd-core/src/: engine.rs  error.rs  lib.rs  metrics.rs
crates/app-powerd-core/src/config/: loader.rs  matching.rs  mod.rs
crates/app-powerd-core/src/desktop/: mod.rs  window.rs  x11.rs
crates/app-powerd-core/src/desktop/wayland/: gnome.rs  mod.rs  wlr_toplevel.rs
crates/app-powerd-core/src/engine/: config_power.rs  focus.rs  ipc_handler.rs  mod.rs  suspend.rs  transitions.rs
crates/app-powerd-core/src/guards/: audio.rs  camera.rs  input.rs  mod.rs
crates/app-powerd-core/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
crates/app-powerd-core/src/state/: app_entry.rs  machine.rs  mod.rs  registry.rs
crates/app-powerd-core/src/system/: cgroup.rs  freeze.rs  mod.rs  power.rs  process.rs  systemd_dbus.rs  throttle.rs
crates/app-powerd-core/tests/: integration.rs
crates/app-powerd/src/: main.rs
