[workspace]
resolver = "2"
members = [
  "crates/app-powerd-core",
  "crates/app-powerd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Evgenii Lepikhin <johnlepikhin@gmail.com>"]
repository = "https://github.com/johnlepikhin/app-powerd"
homepage = "https://github.com/johnlepikhin/app-powerd"

[workspace.dependencies]
tokio = { version = "1", features = ["rt", "macros", "signal", "net", "time", "io-util", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
nix = { version = "0.29", features = ["signal", "process", "user", "fs"] }
inotify = { version = "0.11", features = ["stream"] }
x11rb = { version = "0.13", features = ["allow-unsafe-code", "screensaver"] }
zbus = "5"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

app-powerd-core = { path = "crates/app-powerd-core", version = "0.1.0" }

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = true
strip = true
debug = false
codegen-units = 1
