[package]
name = "app-powerd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for app-powerd: battery-saving background app management"
readme = "../../README.md"
keywords = ["battery", "power-management", "cgroup", "linux", "daemon"]
categories = ["os::linux-apis", "command-line-utilities"]
exclude = ["CLAUDE.md", ".claude/"]

[features]
default = ["x11"]
x11 = ["dep:x11rb"]
wayland = ["dep:wayland-client", "dep:wayland-protocols-wlr"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
nix = { workspace = true }
inotify = { workspace = true }
x11rb = { workspace = true, optional = true }
zbus = { workspace = true }
wayland-client = { workspace = true, optional = true }
wayland-protocols-wlr = { workspace = true, optional = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
humantime-serde = { workspace = true }

[lints]
workspace = true
