[package]
name = "app-powerd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "User-level daemon that saves battery by freezing/throttling unfocused GUI apps"
readme = "../../README.md"
keywords = ["battery", "power-management", "cgroup", "linux", "daemon"]
categories = ["os::linux-apis", "command-line-utilities"]
exclude = ["CLAUDE.md", ".claude/"]

[[bin]]
name = "app-powerd"
path = "src/main.rs"

[features]
default = ["x11"]
x11 = ["app-powerd-core/x11"]
wayland = ["app-powerd-core/wayland"]

[dependencies]
app-powerd-core = { workspace = true, default-features = false }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }

[lints]
workspace = true
